objects/Global_Account__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Global Customer Description.</description>
        <inlineHelpText>Description of the Global Customer.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GAM_Code__c</fullName>
        <label>GAM Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM_Name__c</fullName>
        <label>GAM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIBU__c</fullName>
        <label>GIBU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>DataComm</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Lighting</fullName>
                </value>
                <value>
                    <fullName>Solar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Account_Number__c</fullName>
        <inlineHelpText>Global Account Number. Aka. Worldwide Account Number.</inlineHelpText>
        <label>Global Account Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook_Id__c</fullName>
        <description>Salesforce Id of the Pricebook2 object for this Global Account</description>
        <label>Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Global Account</label>
    <listViews>
        <fullName>All_Global_Accounts</fullName>
        <columns>NAME</columns>
        <columns>GAM_Code__c</columns>
        <columns>GAM_Name__c</columns>
        <columns>Global_Account_Number__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Global Accounts</label>
    </listViews>
    <listViews>
        <fullName>DTC_Global_Accounts</fullName>
        <columns>NAME</columns>
        <columns>GAM_Code__c</columns>
        <columns>GAM_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GIBU__c</field>
            <operation>equals</operation>
            <value>DataComm</value>
        </filters>
        <label>DTC Global Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>DataCommUsers</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Global Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>